# claude-code-book-chapter4

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
.steering/20260204-initial-implementation/: design.md  requirements.md  tasklist.md
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md
src/: error.rs  main.rs
src/cli/: args.rs  mod.rs  output.rs
src/cli/commands/: add.rs  completions.rs  delete.rs  depends.rs  edit.rs  init.rs  list.rs  migrate.rs  mod.rs  next.rs  pin.rs  search.rs  show.rs  status.rs  today.rs
src/config/: settings.rs
src/domain/: date_parser.rs  dependency.rs  mod.rs  scoring.rs  status.rs  task.rs
src/storage/: lock.rs  markdown.rs  meta.rs  mod.rs  repository.rs
tests/: integration.rs
