[package]
name = "taskctl"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
description = "A CLI task manager with automatic priority adjustment"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
fs2 = "0.4"
dirs = "5"
thiserror = "2"
anyhow = "1"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
needless_pass_by_value = "allow"
match_same_arms = "allow"
unnested_or_patterns = "allow"
